# IN104

./: CMakeCache.txt  CMakeLists.txt  IN104  Makefile  applySVM.c  applySVM.h  b.csv  cmake_install.cmake  link.txt  model.ipynb  readme.md  readme.txt  savetocsv.c  savetocsv.h  stft.c  stft.h  test.txt  utiles.c  utiles.h  w.csv  wav2vect  wave.c  wave.h
audio-read/: testWav.c  toWave  wav2vect  wave.c
